update post jupyter-installation; update theme/stack; ...

--- a/config/_default/markup.toml
+++ b/config/_default/markup.toml
@@ -20,5 +20,5 @@ tabWidth = 4
 # solve double backslash problem
 [goldmark.extensions.passthrough]
 enable = true
-delimiters.block = [["\\[", "\\]"], ["$$", "$$"]]
-delimiters.inline = [["\\(", "\\)"], ["$", "$"]]
+delimiters.block = [['\[', '\]'], ['$$', '$$']]
+delimiters.inline = [['\(', '\)'], ['$', '$']]
