add /blog to baseurl

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://anemele.github.io/"
+baseurl = "https://anemele.github.io/blog"
 languageCode = "en-us"
 pagination.pagerSize = 5
 title = "Jason Swift's blogs"
